# clang_luabind_test

./: .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp
.github/workflows/: linux-clang.yml  windows-clang.yml
luajit/include/: luajit.h
luajit/lib/: buildvm.lib  lua51.lib  luajit.lib  minilua.lib
